--- a/dotnet-code-challenge/dotnet-code-challenge.csproj
+++ b/dotnet-code-challenge/dotnet-code-challenge.csproj
@@ -11,4 +11,8 @@
     <Folder Include="FeedData\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
+
 </Project>
