--- a/dotnet-code-challenge.Test/dotnet-code-challenge.Test.csproj
+++ b/dotnet-code-challenge.Test/dotnet-code-challenge.Test.csproj
@@ -11,15 +11,28 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-    <PackageReference Include="xunit" Version="2.3.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\dotnet-code-challenge\dotnet-code-challenge.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Output\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="dotnet_code_challenge">
+      <HintPath>..\dotnet-code-challenge\bin\Debug\netcoreapp2.0\dotnet_code_challenge.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
